#110, #166, refactoring